--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -46,9 +46,9 @@ jobs:
     - name: SSH into EC2 and Deploy
       run: |
         ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-          docker login -u "${{ secrets.DOCKER_USERNAME }}" -p "${{ secrets.DOCKER_PASSWORD }}"
-          docker pull ${{ secrets.DOCKER_USERNAME }}/private:be
-          docker stop private-be || true
-          docker rm private-be || true
-          docker run -d --name private-be -p 2000:2000 ${{ secrets.DOCKER_USERNAME }}/private:be
+          sudo docker login -u "${{ secrets.DOCKER_USERNAME }}" -p "${{ secrets.DOCKER_PASSWORD }}"
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/private:be
+          sudo docker stop private-be || true
+          sudo docker rm private-be || true
+          sudo docker run -d --name private-be -p 2000:2000 ${{ secrets.DOCKER_USERNAME }}/private:be
         EOF
